fix: 🐛 刪除會員回傳資料補上 email 與 role 欄位
